--- a/pug/main_index.pug
+++ b/pug/main_index.pug
@@ -27,26 +27,46 @@ main
 
         .col-xs-4
           .aside-slider
-              //.btns
+              .btns
                 a(href="#").btn.-normal
                   .icon.-red-bg
                     include ../static/icons/percentage.svg
                   .link.-yellow-bg.-center Лидеры продаж
-                a(href="#").btn.-normal
+                a(href="#").btn.-normal.-disabled
                   .icon.-red-bg
                     include ../static/icons/percentage.svg
                   .link.-yellow-bg.-center Новинки
-                a(href="#").btn.-normal
+                //a(href="#").btn.-normal
                   .icon.-red-bg
                     include ../static/icons/percentage.svg
                   .link.-yellow-bg.-center Спецпредложения
-              .title SYMA X23 m<br>плати за 2 - бери 3
-              .sub-title Акция действует с 18 октября по 31 ноября
-              .image
-                img(src="images/walli.jpg", alt="")
-                .prices
-                  .sale цена <s>205 000</s>
-                  .price 175 000 ₽
+              .aside-slider-left
+              .aside-slider-right
+              .aside-slider-wrap.owl-carousel
+                .item
+                  .title SYMA X23 m<br>плати за 2 - бери 3
+                  .sub-title Акция действует с 18 октября по 31 ноября
+                  .image
+                    img(src="images/walli.jpg", alt="")
+                    .prices
+                      .sale цена <s>205 000</s>
+                      .price 175 000 ₽
+                .item
+                  .title SYMA X23 m<br>плати за 2 - бери 3
+                  .sub-title Акция действует с 18 октября по 31 ноября
+                  .image
+                    img(src="images/walli.jpg", alt="")
+                    .prices
+                      .sale цена <s>205 000</s>
+                      .price 175 000 ₽
+                .item
+                  .title SYMA X23 m<br>плати за 2 - бери 3
+                  .sub-title Акция действует с 18 октября по 31 ноября
+                  .image
+                    img(src="images/walli.jpg", alt="")
+                    .prices
+                      .sale цена <s>205 000</s>
+                      .price 175 000 ₽
 
           .block-icons
             .item
