--- a/pug/main.pug
+++ b/pug/main.pug
@@ -3,6 +3,8 @@ html(lang="ru")
   head
     link(href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet")
     link(rel="stylesheet", href="styles/main.css")
+    link(rel="stylesheet" href="styles/assets/owl.carousel.min.css")
+    link(rel="stylesheet" href="styles/assets/owl.theme.default.min.css")
     meta(charset="UTF-8")
     title Главная
   body
