--- a/sass/components/_aside-slider.scss
+++ b/sass/components/_aside-slider.scss
@@ -1,5 +1,6 @@
 
 .aside-slider {
+  position: relative;
   margin-top: 1.4rem;
   background: $yellow;
 
@@ -7,7 +8,34 @@
     display: flex
   }
 
-  > .title {
+  > .btns > .btn,
+  > .btns > .btn > .link {
+    flex: 1;
+  }
+
+  .aside-slider-left,
+  .aside-slider-right {
+    z-index: 10;
+    position: absolute;
+    top: 15%;
+    background: $brown;
+    width: 2.6rem;
+    height: 2.6rem;
+    cursor: pointer;
+  }
+
+  .aside-slider-left {
+    left: -1.3rem;
+  }
+
+  .aside-slider-right {
+    right: -1.3rem;
+  }
+}
+
+.aside-slider-wrap {
+
+  .item > .title {
     font-family: 'IntroBoldCaps';
     text-transform: uppercase;
     text-align: center;
@@ -16,22 +44,26 @@
     margin-bottom: 1rem;
   }
 
-  > .sub-title {
+  .item > .sub-title {
     text-align: center;
     margin-bottom: 1.4rem;
   }
 
-  > .image {
+  .item > .image {
+    display: inline-table;
     position: relative;
+    min-height: 370px;
+    background: #fff;
+    margin: 5px;
   }
 
-  > .image > img {
+  .item > .image > img {
     display: block;
-    padding: 5px;
+    /*padding: 5px;*/
     max-width: 100%;
   }
 
-  > .image > .prices {
+  .item > .image > .prices {
     position: absolute;
     right: 20px;
     bottom: 20px;
@@ -39,13 +71,13 @@
   }
 
 
-  > .image > .prices > .sale {
+  .item > .image > .prices > .sale {
     display: inline-block;
     padding: 0.4rem 0.6rem;
     background: #fff;
   }
 
-  > .image > .prices > .price {
+  .item > .image > .prices > .price {
     flex-wrap: 600;
     font-size: 2rem;
     color: #fff;
