Добавлены шрифты, добавлен postcss

--- a/pug/footer.pug
+++ b/pug/footer.pug
@@ -58,17 +58,17 @@ footer
               a.text(href="mailto:88007753106@mail.ru") E-mail: 88007753106@mail.ru
               a.text(href="tel:8-800-775-3106") 8-800-775-3106
             .contacts
-              .name Бесплатный звонок по России
-              a.text(href="mailto:88007753106@mail.ru") E-mail: 88007753106@mail.ru
-              a.text(href="tel:8-800-775-3106") 8-800-775-3106
+              .name Скворцов Игорь Игоревич
+              a.text(href="mailto:E-mail: igor.s@centr-to.ru") E-mail: E-mail: igor.s@centr-to.ru
+              a.text(href="tel:8-913-070-5566") 8-913-070-5566
             .contacts
-              .name Бесплатный звонок по России
-              a.text(href="mailto:88007753106@mail.ru") E-mail: 88007753106@mail.ru
-              a.text(href="tel:8-800-775-3106") 8-800-775-3106
+              .name Артеев Артур Семенович
+              a.text(href="mailto:artur.a@centr-to.ru") E-mail: artur.a@centr-to.ru
+              a.text(href="tel:8-913-070-0066") 8-913-070-0066
             .contacts
-              .name Бесплатный звонок по России
-              a.text(href="mailto:88007753106@mail.ru") E-mail: 88007753106@mail.ru
-              a.text(href="tel:8-800-775-3106") 8-800-775-3106
+              .name Кувшинов Алексей Александрович
+              a.text(href="mailto:aleksey.k@centr-to.ru") E-mail: aleksey.k@centr-to.ru
+              a.text(href="tel:8-913-070-0807") 8-913-070-0807
 
         .row
           .col-xs-3.bd-r
