--- a/pug/head.pug
+++ b/pug/head.pug
@@ -23,7 +23,7 @@ header.wrap
           include ../static/icons/shopping-cart.svg
         .link.-yellow-bg.-center
           .count 2 товара на&nbsp;
-          .price 780 829 .Р
+          .price 780 829 <span class="currency">Р</span>
 
 
   .container-fluid
