Пофиксен баг с кнопками поиска в фаерфокс

--- a/pug/footer.pug
+++ b/pug/footer.pug
@@ -3,7 +3,7 @@ footer
   .wrap
     .input-search
       input(type="text" placeholder="Искать товар по названию").input.-full
-      button.search.-yellow 
+      .search.-yellow 
         include ../static/icons/search.svg
         | Найти
     .exemple Например: DJI Phantom 3 Advanced
