--- a/pug/head.pug
+++ b/pug/head.pug
@@ -14,7 +14,7 @@ header.wrap
 
       .input-search
         input(type="text" placeholder="Искать товар по названию").input
-        button.search 
+        .search 
           include ../static/icons/search.svg
           | Найти
 
