Добавлен слайдер цены

--- a/pug/footer.pug
+++ b/pug/footer.pug
@@ -82,5 +82,7 @@ footer
               p Информация на данном интернет-сайте носит исключительно информационный (ознакомительный) характер и ни при каких условиях не является публичной офертой, определяемой положениями Статьи 437 Гражданского кодекса РФ. Для получения исчерпывающей информации о стоимости и характеристиках товаров обращайтесь к менеджерам по продажам.
           
 script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js")
+script(src="../scripts/jquery-ui.min.js")
+script(src="../scripts/jquery.numeric.min.js")
 script(src="../scripts/owl.carousel.min.js")
 script(src="../scripts/script.js")
