--- a/sass/components/_input.scss
+++ b/sass/components/_input.scss
@@ -18,7 +18,8 @@
     margin: 0 0.8rem;
   }
 
-  > .select {
+  > .select,
+  > .slider {
     border: none;
     padding: 1.2rem 3rem 1.2rem 1.2rem;
     min-width: 14rem;
@@ -26,6 +27,40 @@
     -moz-appearance: none;
     -ms-progress-appearance: none;
     -webkit-appearance: none;
+    background: #fff;
+  }
+
+  > .slider {
+    position: relative;
+    padding: 1.2rem;
+  }
+
+  > .slider > .slider-price-wrap {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    transform: translateY(100%) scaleY(0);
+    transition: transform .4s;
+    transform-origin: top;
+    padding: 1.2rem 1.2rem;
+    background: #fff;
+  }
+
+  > .slider > label > .slider-min-val,
+  > .slider > label > .slider-max-val {
+    border: none;
+    display: inline;
+    background: none;
+    max-width: 5rem;
+    text-align: center;
+  }
+
+  > .slider > .slider-price-wrap.-visable {
+    transform: translateY(100%) scaleY(1);
+  }
+
+  > .select {
     background: #fff url(../icons/next.svg) no-repeat 95%;
     background-size: 18px 100%;
   }
