--- a/pug/main_index.pug
+++ b/pug/main_index.pug
@@ -132,6 +132,7 @@ main
 
           label.input.-checkbox.-mar В наличии
             input(type="checkbox").checkbox
+            span.checked
           
           button.btn.-submit.-gray Подобрать
 
