--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -21,6 +21,11 @@
     font-size: 1.1rem;
     font-weight: 600;
     box-shadow: 0px 4px 32px 0 rgba(0, 0, 0, 0.32);
+    transition: box-shadow .4s;
+  }
+
+  &.-submit:hover {
+    box-shadow: none;
   }
 
   > .link {
