--- a/sass/components/_card-hidden.scss
+++ b/sass/components/_card-hidden.scss
@@ -17,10 +17,14 @@
   > .wrapper > .image {
     display: block;
     margin-top: 1.7rem;
+    height: 100px;
   }
 
   > .wrapper > .image > img {
     max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
   }
 
   > .wrapper > .title.-link {
