--- a/sass/components/_input.scss
+++ b/sass/components/_input.scss
@@ -65,8 +65,12 @@
     background-size: 18px 100%;
   }
 
-  &.-checkbox::after {
-    content: '';
+  
+  > .checkbox {
+    display: none;
+  }
+
+  &.-checkbox > .checked {
     height: 50px;
     width: 50px;
     background: #fff;
@@ -75,8 +79,12 @@
     margin-left: 0.8rem;
   }
 
-  > .checkbox {
-    display: none;
+  > .checkbox:checked + .checked {
+    background-image: url(../icons/checked.svg);
+    background-size: 90%;
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-color: #fff;
   }
 
 }
